--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.17.2",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-deploy-netlify-cli": "^2.0.0",
     "ember-cli-eslint": "^5.1.0",
     "ember-cli-htmlbars": "^4.2.2",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-mirage": "^1.1.6",
+    "ember-cli-netlify": "^0.4.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.3",
     "ember-cli-uglify": "^3.0.0",
